// DO NOT EDIT: this file is AUTOMATICALLY GENERATED and should not be changed.
syntax = "proto2";

package xls;

// Listing of all XLS IR operations.
enum OpProto {
  OP_INVALID = 0;
  OP_ADD = 1;
  OP_AND = 2;
  OP_AND_REDUCE = 3;
  OP_ASSERT = 4;
  OP_COVER = 5;
  OP_RECEIVE = 6;
  OP_SEND = 7;
  OP_NAND = 8;
  OP_NOR = 9;
  OP_AFTER_ALL = 10;
  OP_ARRAY = 11;
  OP_ARRAY_INDEX = 12;
  OP_ARRAY_SLICE = 13;
  OP_ARRAY_UPDATE = 14;
  OP_ARRAY_CONCAT = 15;
  OP_BIT_SLICE = 16;
  OP_DYNAMIC_BIT_SLICE = 17;
  OP_BIT_SLICE_UPDATE = 18;
  OP_CONCAT = 19;
  OP_COUNTED_FOR = 20;
  OP_DECODE = 21;
  OP_DYNAMIC_COUNTED_FOR = 22;
  OP_ENCODE = 23;
  OP_EQ = 24;
  OP_IDENTITY = 25;
  OP_INVOKE = 26;
  OP_INPUT_PORT = 27;
  OP_LITERAL = 28;
  OP_MAP = 29;
  OP_NE = 30;
  OP_NEG = 31;
  OP_NOT = 32;
  OP_ONE_HOT = 33;
  OP_ONE_HOT_SEL = 34;
  OP_OR = 35;
  OP_OR_REDUCE = 36;
  OP_OUTPUT_PORT = 37;
  OP_PARAM = 38;
  OP_REGISTER_READ = 39;
  OP_REGISTER_WRITE = 40;
  OP_INSTANTIATION_OUTPUT = 41;
  OP_INSTANTIATION_INPUT = 42;
  OP_REVERSE = 43;
  OP_SDIV = 44;
  OP_SMOD = 45;
  OP_SEL = 46;
  OP_SGE = 47;
  OP_SGT = 48;
  OP_SHLL = 49;
  OP_SHRL = 50;
  OP_SHRA = 51;
  OP_SIGN_EXT = 52;
  OP_SLE = 53;
  OP_SLT = 54;
  OP_SMUL = 55;
  OP_SUB = 56;
  OP_TUPLE = 57;
  OP_TUPLE_INDEX = 58;
  OP_UDIV = 59;
  OP_UMOD = 60;
  OP_UGE = 61;
  OP_UGT = 62;
  OP_ULE = 63;
  OP_ULT = 64;
  OP_UMUL = 65;
  OP_XOR = 66;
  OP_XOR_REDUCE = 67;
  OP_ZERO_EXT = 68;
  OP_GATE = 69;
  OP_TRACE = 70;
}
